Latest Release Version is also linked as handle now
Former-commit-id: fdaca3fc3292eb2c424f7d230085c3e47127a028

--- a/pubman/pubman_presentation/src/main/webapp/viewItem/BasicGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/BasicGroup.jspf
@@ -116,8 +116,8 @@
 				<h:outputText value="#{lbl.ViewItemFull_lblLatestVersion}" /><span class="noDisplay">: </span>
 			</b>
 			<span class="xHuge_area0 xTiny_marginLExcl endline">
-				<h:outputLink id="lnkLatestVersionURL" value="#{ViewItemFull.latestVersionURL}" >
-					<h:outputText value="#{ViewItemFull.latestVersionURL}"/>
+				<h:outputLink id="lnkLatestVersionURL" value="#{ViewItemFull.resolveHandleService}#{ViewItemFull.pubItem.latestRelease.pid}" >
+					<h:outputText value="#{ViewItemFull.resolveHandleService}#{ViewItemFull.pubItem.latestRelease.pid}"/>
 				</h:outputLink>	
 			</span>
 		</h:panelGroup>
