--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step4Manual.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step4Manual.jspf
@@ -123,7 +123,8 @@
 		<%-- Creators --%>
 		<jsp:directive.include file="ui/CreatorCollection.jspf"/>
 
-		<h:panelGroup styleClass="full_area0 itemBlock" rendered="#{!(genre.content_display == 'false' || (genre.content_form_id != 'easy-submission' && genre.content_form_id != 'all'))}">
+		<h:panelGroup styleClass="full_area0 itemBlock" rendered="#{!(genre.content_display == 'false' || genre.content_form_id == 'full-submission')}">
+			
 			<h3 class="xLarge_area0_p8 endline blockHeader">
 				<h:outputText value="#{genre.content_label}" converter="GenreLabelConverter"/>
 			</h3>
@@ -131,7 +132,9 @@
 			<div class="free_area0 itemBlockContent marginTExcl6p endline">
 
 				<%-- Subject (Free Keywords) --%>
-				<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder" rendered="#{!(genre.content_display == 'false' || (genre.content_form_id != 'easy-submission' && genre.content_form_id != 'all'))}">
+				<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder">
+					
+					
 					<b class="xLarge_area0_p8 endline labelLine clear">
 						&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.content_item_subject_optional != 'true'}" /><h:outputText value="#{genre.content_item_subject_label}" converter="GenreLabelConverter"/><span class="noDisplay">: </span>
 					</b>
@@ -141,7 +144,7 @@
 				</h:panelGroup>
 
 				<%-- DDC Subject (List -> first element) --%>
-				<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder" rendered="#{EditItem.hasSubjectClassification && !(genre.content_item_subject_display == 'false' || (genre.content_item_subject_form_id != 'easy-submission' && genre.content_item_subject_form_id != 'all'))}">
+				<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder" rendered="#{EditItem.hasSubjectClassification && !(genre.content_item_subject_display == 'false' || genre.content_item_subject_form_id == 'full-submission')}">
 					<b class="xLarge_area0_p8 endline labelLine clear">
 						&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.content_item_subject_optional != 'true'}" /><h:outputText value="#{lbl.EditItem_lblClassifiedSubject}"/><span class="noDisplay">: </span>
 					</b>
@@ -171,7 +174,7 @@
 				</h:panelGroup>
 		
 				<%-- Abstract --%>		
-				<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder" rendered="#{!(genre.content_item_abstract_display == 'false' || (genre.content_item_abstract_form_id != 'easy-submission' && genre.content_item_abstract_form_id != 'all'))}">
+				<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder" rendered="#{!(genre.content_item_abstract_display == 'false' || (genre.content_item_abstract_form_id == 'full-submission'))}">
 					<b class="xLarge_area0_p8 endline labelLine clear">
 						&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.content_item_abstract_optional != 'true'}" /><h:outputText value="#{genre.content_item_abstract_label}" converter="GenreLabelConverter"/><span class="noDisplay">: </span>
 					</b>
