PUBMAN-2546 fixed: Advanced Search: the values in other search fields be deleted after switch to organization
Former-commit-id: 96449b5da3afb1cd653e054b5f178ff05ad91f8a

--- a/pubman/pubman_presentation/src/main/webapp/search/AdvancedSearchEdit.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/search/AdvancedSearchEdit.jspf
@@ -165,7 +165,7 @@ All rights reserved. Use is subject to license terms.
 						</a4j:commandButton>
 						
 						<!-- Placeholder if button for opening parenthesis is not displayed -->
-						<h:panelGroup styleClass="tiny_area0" rendered="#{not empty AdvancedSearchBean.currentlyOpenedParenthesis}">
+						<h:panelGroup styleClass="tiny_area0" rendered="#{not empty AdvancedSearchBean.currentlyOpenedPa:qqqrenthesis}">
 							&#160;
 						</h:panelGroup>	
 						
@@ -183,7 +183,6 @@ All rights reserved. Use is subject to license terms.
 							</h:selectOneMenu>
 						</h:panelGroup>
 					</h:panelGroup>
-					<h:outputText value="#{criterion.searchCriterion.displayType}"/>
 					
 					<!-- input for standard criterions -->
 					<h:panelGroup rendered="#{criterion.searchCriterion.displayType == 'STANDARD'}">
