--- a/pubman/pubman_presentation/src/main/webapp/search/AdvancedSearchEdit.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/search/AdvancedSearchEdit.jspf
@@ -165,7 +165,7 @@ All rights reserved. Use is subject to license terms.
 						</a4j:commandButton>
 						
 						<!-- Placeholder if button for opening parenthesis is not displayed -->
-						<h:panelGroup styleClass="tiny_area0" rendered="#{not empty AdvancedSearchBean.currentlyOpenedPa:qqqrenthesis}">
+						<h:panelGroup styleClass="tiny_area0" rendered="#{not empty AdvancedSearchBean.currentlyOpenedParenthesis}">
 							&#160;
 						</h:panelGroup>	
 						
