- Resolved [PUBMAN-2553] - View Item: the permalink of attached files shoud be hided when the visibility is private or restricted - removed [NEW]-Tag from Tooltips
Former-commit-id: 1eb4d92f7f5b1b76a99bac0ba82f5c77720fd947

--- a/pubman/pubman_presentation/src/main/webapp/viewItem/BasicGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/BasicGroup.jspf
@@ -46,8 +46,8 @@
 				<h:outputText value="#{lbl.ViewItemFull_lblCiteItemAs}" /><span class="noDisplay">: </span>
 			</b>
 			<span class="xHuge_area0 xTiny_marginLExcl endline">
-				<h:outputLink id="lnkCitationURL" value="#{ViewItemFull.resolveHandleService}#{ViewItemFull.pubItem.version.pid}" rendered="#{ViewItemFull.isStateReleased and ViewItemFull.pubItem.version.pid != null}">
-					<h:outputText value="#{ViewItemFull.resolveHandleService}#{ViewItemFull.pubItem.version.pid}"/>
+				<h:outputLink id="lnkCitationURL" value="#{ViewItemFull.resolveHandleService}#{ViewItemFull.pubItem.version.pidWithoutPrefix}" rendered="#{ViewItemFull.isStateReleased and ViewItemFull.pubItem.version.pid != null}">
+					<h:outputText value="#{ViewItemFull.resolveHandleService}#{ViewItemFull.pubItem.version.pidWithoutPrefix}"/>
 				</h:outputLink>	
 			<h:outputText value="#{lbl.lbl_noEntry}" rendered="#{!ViewItemFull.isStateReleased or ViewItemFull.pubItem.version.pid == null}"/>
 			</span>
@@ -116,8 +116,8 @@
 				<h:outputText value="#{lbl.ViewItemFull_lblLatestVersion}" /><span class="noDisplay">: </span>
 			</b>
 			<span class="xHuge_area0 xTiny_marginLExcl endline">
-				<h:outputLink id="lnkLatestVersionURL" value="#{ViewItemFull.resolveHandleService}#{ViewItemFull.pubItem.latestRelease.pid}" >
-					<h:outputText value="#{ViewItemFull.resolveHandleService}#{ViewItemFull.pubItem.latestRelease.pid}"/>
+				<h:outputLink id="lnkLatestVersionURL" value="#{ViewItemFull.resolveHandleService}#{ViewItemFull.pubItem.latestRelease.pidWithoutPrefix}" >
+					<h:outputText value="#{ViewItemFull.resolveHandleService}#{ViewItemFull.pubItem.latestRelease.pidWithoutPrefix}"/>
 				</h:outputLink>	
 			</span>
 		</h:panelGroup>
