Added new logos

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/header.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/header.css
@@ -127,10 +127,16 @@
 	background-repeat:no-repeat;
 }
 
-.headerLogo, .themePark {
+.headerLogo {
 	border:none;
 	position: absolute;
 	top: 0;
+}
+
+.themePark {
+	position: absolute;
+	top: 0;
+	height: 5em;
 }
 
 .LogoNSearch {
