--- a/pubman/pubman_presentation/src/main/webapp/header/Header.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/header/Header.jspf
@@ -53,12 +53,13 @@
 	<%-- import meta menu here --%>
 	<jsp:directive.include file="ui/MetaMenu.jspf"/>
 	<div class="full_area0 LogoNSearch">
-		<h:outputLink id="lnkStartPage" title="#{tip.navigation_lblStartpage}" value="#{ApplicationBean.appContext}HomePage.jsp">
 
-				<h:panelGroup styleClass="tiny_marginLExcl themePark #{Header.serverLogo}">
-					<h:graphicImage styleClass="headerLogo" url="#{ApplicationBean.logoUrl}"></h:graphicImage>
-				</h:panelGroup>
+		<h:outputLink id="lnkStartPage" title="#{tip.navigation_lblStartpage}" value="#{ApplicationBean.appContext}HomePage.jsp">
+			<h:graphicImage styleClass="tiny_marginLExcl headerLogo" style="border:none;" url="#{ApplicationBean.logoUrl}"></h:graphicImage>
 		</h:outputLink>
+		<h:panelGroup styleClass="tiny_marginLExcl quad_area0 themePark #{Header.serverLogo}">
+		</h:panelGroup>
+
 		<%-- import search here--%>
 		<jsp:directive.include file="ui/SearchMenu.jspf"/>
 	</div>
